--- a/index.html
+++ b/index.html
@@ -124,9 +124,42 @@
            <img src="up-to-date.jpg" alt="woman-working">
         </div>
     </div>
+</div>
 
+<div id="dropdown-box-container">
+    <div id="left-div">
+        <img src="connection.jpg" alt="no-photo">
+        <div>
+        <p>Connect with people who can help</p>
+        <button>Find people you know</button>
+        </div>
+    </div>
+    <div id="right-div">
+        <img src="learn.jpg" alt="no-photo">
+        <div>
+        <p>Learn the skills you need to Succeed</p>
+        <div>
+        <button id="drop-btn" onclick="showContent()">Choose a topic to learn about <span>⏷</span></button>
+        <div id="dropdown-content">
+            <ul>
+                <li>Training and Education <span>250+ Courses</span></li>
+                <li>IT Help Desk <span>50+ Courses</span></li>
+                <li>DevOps <span>60+ Courses</span></li>
+                <li>Security <span>20+ Courses</span></li>
+                <li>Graphic Design <span>340+ Courses</span></li>
+                <li>Network and System administration <span>540+ Courses</span></li>
+                <li>AEC<span>730+ Courses</span></li>
+                <li>Marketing <span>10+ Courses</span></li>
+
+            </ul>
+        </div>
+    </div>
+    </div>
+    </div>
 
 </div>
+
+
 
 <script src="script.js"></script>
 </body>
