--- a/index.html
+++ b/index.html
@@ -159,6 +159,57 @@
 
 </div>
 
+<div id="join-SyncIn-container">
+    <p>Join your colleagues, classmates, and friends on LinkedIn</p>
+    <button>Get Started</button>
+</div>
+
+<div id="footer">
+    <div class="brandName"><p id="f1">Sync</p> <p id="f2">in</p> </div>
+    
+    <div class="footer-parts">
+        <p>General</p>
+        <ul>
+            <li>Sign up</li>
+            <li>About</li>
+            <li>press</li>
+            <li>Blog</li>
+            <li>Developers</li>
+        </ul>
+    </div>
+
+    <div class="footer-parts">
+        <p>Browse SyncIn</p>
+        <ul>
+            <li>Jobs</li>
+            <li>Learning</li>
+            <li>Salary</li>
+        </ul>
+    </div>
+
+    <div class="footer-parts">
+        <p>Business Solution</p>
+        <ul>
+            <li>Sign up</li>
+            <li>Talent</li>
+            <li>Marketing</li>
+        </ul>
+    </div>
+
+    <div class="footer-parts">
+        <p>Directories</p>
+        <ul>
+            <li>Members</li>
+            <li>Jobs</li>
+            <li>Company</li>
+            <li>Post</li>
+            <li>Article</li>
+            <li>School</li>
+            <li>Product</li>
+        </ul>
+    </div>
+</div>
+
 
 
 <script src="script.js"></script>
